--- a/portovideo/index.html
+++ b/portovideo/index.html
@@ -28,8 +28,8 @@
 	
 </div>
 <div class="modal">
-	<h5>Укажите имя и свой номер телефона</h5>
-	<p>И наш администратор позвонит Вам чтобы уточнить резерв столика</p>
+	<h5>Пожалуйста, укажите Ваше имя и номер телефона</h5>
+	<p>и мы свяжемся с Вами для уточнения дня и времени посещения</p>
 	<form action="">
 		<input type="text" placeholder="Имя">
 		<input type="text" placeholder="Номер телефона">
@@ -113,7 +113,7 @@
 		<div class="col-xs-6">
 			<h2>О ресторане</h2>
 			<p class="about__content">
-				Наша политика-использование только высококачественных, свежих морепродуктов. Приемлемые цены и отсутствие порционных блюд (что касается морепродуктов) - наши принципы работы. Вы сами выбираете размер рыбы. Наш ресторан и для гурманов, привыкших эксклюзивным рыбным ресторанам, и для людей, которые только начинают знакомство с лучшими сторонами морской кухни.  Наша особенность состоит в подаче рыбных блюд. В принципе, она характерна для хорошего рыбного ресторана, но в Москве такое увидишь нечасто. Возле витрины, сверкающей тысячами осколков льда и пестрыми обитателями моря вы сами выбираете рыбу и морепродукты и обсуждаете с поваром то, каким способом для вас это будут готовить. 
+				Наша политика-использование только высококачественных, свежих морепродуктов. Приемлемые цены и отсутствие порционных блюд (что касается морепродуктов) - наши принципы работы. Вы сами выбираете размер рыбы. Наш ресторан и для гурманов, привыкших к эксклюзивным рыбным ресторанам, и для людей, которые только начинают знакомство с лучшими сторонами морской кухни.  Наша особенность состоит в подаче рыбных блюд. В принципе, она характерна для хорошего рыбного ресторана, но в Москве такое увидишь нечасто. Возле витрины, сверкающей тысячами осколков льда и пестрыми обитателями моря вы сами выбираете рыбу и морепродукты и обсуждаете с поваром то, каким способом для вас это будут готовить. 
 			</p>
 		</div>
 	</div>
@@ -141,7 +141,7 @@
 		<div class="row">
 			<div class="col-xs-6">
 				<p class="about__content">
-					И, разумеется, продукция нашего аквариума: всевозможные живые мидии, устрицы, гребешки, лобстеры и раки могут быть приготовлены на гриле или по специальным домашним рецептам. Все это морское великолепие дополняется различными салатами, изумительным домашним хлебом, и конечно, отличными белыми винами (представлены Испания, Франция, Италия, Чили, Хорватия и Сербия).
+					И, разумеется, продукция нашего аквариума: всевозможные живые мидии, устрицы, гребешки, лобстеры и раки могут быть приготовлены на гриле или по специальным домашним рецептам. Все это морское великолепие дополняется различными салатами, изумительным домашним хлебом, и конечно, отличными винами (стран Испании, Франции, Чили, Италии, Хорватии, Сербии и т.д.).
 				</p>
 				<button class="about__button">
 					<p>Резерв</p>
