--- a/ann/2.htm
+++ b/ann/2.htm
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
+	<title>Evgenstudio</title>
+	<meta name="description" content="">
 <title>
 
 </title>
@@ -27,7 +31,7 @@
 <body>
 <h1 align="center">
 <em>
-История семьи 
+РСЃС‚РѕСЂРёСЏ СЃРµРјСЊРё 
 </em>
 </h1>
 <div class="block">
@@ -36,19 +40,19 @@
 
 
 <p align="justify"; style="margin: 0.3em">
-Фамилия <b> Щеголихин </b> образована от прозвища Щеголиха. Так обычно называли того, кто нарядно, изысканно одет, кто имеет пристрастие к дорогим, модным нарядам. Само прозвище восходит к глаголу «щеголять» - «хвастать, хвалиться превосходством чего-либо».
+Р¤Р°РјРёР»РёСЏ <b> Р©РµРіРѕР»РёС…РёРЅ </b> РѕР±СЂР°Р·РѕРІР°РЅР° РѕС‚ РїСЂРѕР·РІРёС‰Р° Р©РµРіРѕР»РёС…Р°. РўР°Рє РѕР±С‹С‡РЅРѕ РЅР°Р·С‹РІР°Р»Рё С‚РѕРіРѕ, РєС‚Рѕ РЅР°СЂСЏРґРЅРѕ, РёР·С‹СЃРєР°РЅРЅРѕ РѕРґРµС‚, РєС‚Рѕ РёРјРµРµС‚ РїСЂРёСЃС‚СЂР°СЃС‚РёРµ Рє РґРѕСЂРѕРіРёРј, РјРѕРґРЅС‹Рј РЅР°СЂСЏРґР°Рј. РЎР°РјРѕ РїСЂРѕР·РІРёС‰Рµ РІРѕСЃС…РѕРґРёС‚ Рє РіР»Р°РіРѕР»Сѓ В«С‰РµРіРѕР»СЏС‚СЊВ» - В«С…РІР°СЃС‚Р°С‚СЊ, С…РІР°Р»РёС‚СЊСЃСЏ РїСЂРµРІРѕСЃС…РѕРґСЃС‚РІРѕРј С‡РµРіРѕ-Р»РёР±РѕВ».
 </p>
 
 <p align="justify"; style="text-indent: 25px;  margin: 0.3em">
-Как правило, щеголей в народе осуждали: «Щеголять смолоду, а под старость умирать с голоду», «Щеголь Ивашка, что ни год, то рубашка!». 
+РљР°Рє РїСЂР°РІРёР»Рѕ, С‰РµРіРѕР»РµР№ РІ РЅР°СЂРѕРґРµ РѕСЃСѓР¶РґР°Р»Рё: В«Р©РµРіРѕР»СЏС‚СЊ СЃРјРѕР»РѕРґСѓ, Р° РїРѕРґ СЃС‚Р°СЂРѕСЃС‚СЊ СѓРјРёСЂР°С‚СЊ СЃ РіРѕР»РѕРґСѓВ», В«Р©РµРіРѕР»СЊ РРІР°С€РєР°, С‡С‚Рѕ РЅРё РіРѕРґ, С‚Рѕ СЂСѓР±Р°С€РєР°!В». 
 
-Кроме того, в некоторых говорах Щеголихой называли не только любительницу красиво одеваться, но и белоручку, человека, который избегает тяжелой работы.
+РљСЂРѕРјРµ С‚РѕРіРѕ, РІ РЅРµРєРѕС‚РѕСЂС‹С… РіРѕРІРѕСЂР°С… Р©РµРіРѕР»РёС…РѕР№ РЅР°Р·С‹РІР°Р»Рё РЅРµ С‚РѕР»СЊРєРѕ Р»СЋР±РёС‚РµР»СЊРЅРёС†Сѓ РєСЂР°СЃРёРІРѕ РѕРґРµРІР°С‚СЊСЃСЏ, РЅРѕ Рё Р±РµР»РѕСЂСѓС‡РєСѓ, С‡РµР»РѕРІРµРєР°, РєРѕС‚РѕСЂС‹Р№ РёР·Р±РµРіР°РµС‚ С‚СЏР¶РµР»РѕР№ СЂР°Р±РѕС‚С‹.
 </p>
 <p align="justify"; style="text-indent: 25px;  margin: 0.3em">
-Фамилии, образованные от женского прозвища были достаточно редки на Руси Они возникали лишь в том случае, когда женщине приходилось одной воспитывать своих детей. Щеголиха, со временем получил фамилию Щеголихин.
+Р¤Р°РјРёР»РёРё, РѕР±СЂР°Р·РѕРІР°РЅРЅС‹Рµ РѕС‚ Р¶РµРЅСЃРєРѕРіРѕ РїСЂРѕР·РІРёС‰Р° Р±С‹Р»Рё РґРѕСЃС‚Р°С‚РѕС‡РЅРѕ СЂРµРґРєРё РЅР° Р СѓСЃРё РћРЅРё РІРѕР·РЅРёРєР°Р»Рё Р»РёС€СЊ РІ С‚РѕРј СЃР»СѓС‡Р°Рµ, РєРѕРіРґР° Р¶РµРЅС‰РёРЅРµ РїСЂРёС…РѕРґРёР»РѕСЃСЊ РѕРґРЅРѕР№ РІРѕСЃРїРёС‚С‹РІР°С‚СЊ СЃРІРѕРёС… РґРµС‚РµР№. Р©РµРіРѕР»РёС…Р°, СЃРѕ РІСЂРµРјРµРЅРµРј РїРѕР»СѓС‡РёР» С„Р°РјРёР»РёСЋ Р©РµРіРѕР»РёС…РёРЅ.
 </p>
 <p align="justify"; style="text-indent: 25px;  margin: 0.3em">
-Фоносемантический анализ фамилии Щеголихин выявил, что фамилия Щеголихин имеет восемнадцать ярковыраженных фоносемантических признаков: женственное, трусливое, маленькое, низменное, плохое, сложное, страшное, тихое, отталкивающее, шероховатое, тусклое, печальное, горячее, слабое, пассивное, медлительное, короткое, хилое.
+Р¤РѕРЅРѕСЃРµРјР°РЅС‚РёС‡РµСЃРєРёР№ Р°РЅР°Р»РёР· С„Р°РјРёР»РёРё Р©РµРіРѕР»РёС…РёРЅ РІС‹СЏРІРёР», С‡С‚Рѕ С„Р°РјРёР»РёСЏ Р©РµРіРѕР»РёС…РёРЅ РёРјРµРµС‚ РІРѕСЃРµРјРЅР°РґС†Р°С‚СЊ СЏСЂРєРѕРІС‹СЂР°Р¶РµРЅРЅС‹С… С„РѕРЅРѕСЃРµРјР°РЅС‚РёС‡РµСЃРєРёС… РїСЂРёР·РЅР°РєРѕРІ: Р¶РµРЅСЃС‚РІРµРЅРЅРѕРµ, С‚СЂСѓСЃР»РёРІРѕРµ, РјР°Р»РµРЅСЊРєРѕРµ, РЅРёР·РјРµРЅРЅРѕРµ, РїР»РѕС…РѕРµ, СЃР»РѕР¶РЅРѕРµ, СЃС‚СЂР°С€РЅРѕРµ, С‚РёС…РѕРµ, РѕС‚С‚Р°Р»РєРёРІР°СЋС‰РµРµ, С€РµСЂРѕС…РѕРІР°С‚РѕРµ, С‚СѓСЃРєР»РѕРµ, РїРµС‡Р°Р»СЊРЅРѕРµ, РіРѕСЂСЏС‡РµРµ, СЃР»Р°Р±РѕРµ, РїР°СЃСЃРёРІРЅРѕРµ, РјРµРґР»РёС‚РµР»СЊРЅРѕРµ, РєРѕСЂРѕС‚РєРѕРµ, С…РёР»РѕРµ.
 </p>
 
 </font>
