--- a/ann/3.htm
+++ b/ann/3.htm
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
+	<title>Evgenstudio</title>
+	<meta name="description" content="">
 <title>
-Моя первая страница
+РњРѕСЏ РїРµСЂРІР°СЏ СЃС‚СЂР°РЅРёС†Р°
 
 </title>
 
@@ -10,15 +14,15 @@
 <body>
 <h1 align="center">
 <em>
-География фамилии 
+Р“РµРѕРіСЂР°С„РёСЏ С„Р°РјРёР»РёРё 
 </em>
 </h1>
 <font face="Verdana"; size="+1"> 
 <p>
-На карте изображено расселение людей, Имеющих фамилию Щеголихин (-а). Можно заметить, что большинство людей, имеющих данную фамилию, проживают на территории России.
+РќР° РєР°СЂС‚Рµ РёР·РѕР±СЂР°Р¶РµРЅРѕ СЂР°СЃСЃРµР»РµРЅРёРµ Р»СЋРґРµР№, РРјРµСЋС‰РёС… С„Р°РјРёР»РёСЋ Р©РµРіРѕР»РёС…РёРЅ (-Р°). РњРѕР¶РЅРѕ Р·Р°РјРµС‚РёС‚СЊ, С‡С‚Рѕ Р±РѕР»СЊС€РёРЅСЃС‚РІРѕ Р»СЋРґРµР№, РёРјРµСЋС‰РёС… РґР°РЅРЅСѓСЋ С„Р°РјРёР»РёСЋ, РїСЂРѕР¶РёРІР°СЋС‚ РЅР° С‚РµСЂСЂРёС‚РѕСЂРёРё Р РѕСЃСЃРёРё.
 </p>
 <p style="text-indent: 25px">
-Большая родственников, с которыми наша семья поддерживает связь, проживают с Москве.
+Р‘РѕР»СЊС€Р°СЏ СЂРѕРґСЃС‚РІРµРЅРЅРёРєРѕРІ, СЃ РєРѕС‚РѕСЂС‹РјРё РЅР°С€Р° СЃРµРјСЊСЏ РїРѕРґРґРµСЂР¶РёРІР°РµС‚ СЃРІСЏР·СЊ, РїСЂРѕР¶РёРІР°СЋС‚ СЃ РњРѕСЃРєРІРµ.
 </p>
 </font>
 
