--- a/ann/4.htm
+++ b/ann/4.htm
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
+	<title>Evgenstudio</title>
+	<meta name="description" content="">
 <title>
-Моя первая страница
+РњРѕСЏ РїРµСЂРІР°СЏ СЃС‚СЂР°РЅРёС†Р°
 
 </title>
 
@@ -10,7 +14,7 @@
 <body>
 <h1 align="center">
 <em>
-Семейный альбом
+РЎРµРјРµР№РЅС‹Р№ Р°Р»СЊР±РѕРј
 <p>
 <iframe src="https://docs.google.com/presentation/d/15N7_DluOlm4gPJL-dEtEegw96HJTSPuCLjGoHr2LjBk/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 </p>
