--- a/ann/5.htm
+++ b/ann/5.htm
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
+	<title>Evgenstudio</title>
+	<meta name="description" content="">
 <title>
-Моя первая страница
+РњРѕСЏ РїРµСЂРІР°СЏ СЃС‚СЂР°РЅРёС†Р°
 
 </title>
 
@@ -10,13 +14,13 @@
 <body>
 <h1 align="center">
 <em>
-Поколенные росписи
+РџРѕРєРѕР»РµРЅРЅС‹Рµ СЂРѕСЃРїРёСЃРё
 </em>
 </h1>
 
 <font face="Verdana"; size="+1"> 
 <p>
-На картинке ниже можно видеть генеологическое дерево семьи Щеголихины.
+РќР° РєР°СЂС‚РёРЅРєРµ РЅРёР¶Рµ РјРѕР¶РЅРѕ РІРёРґРµС‚СЊ РіРµРЅРµРѕР»РѕРіРёС‡РµСЃРєРѕРµ РґРµСЂРµРІРѕ СЃРµРјСЊРё Р©РµРіРѕР»РёС…РёРЅС‹.
 </p>
 </font>
 
@@ -30,20 +34,20 @@
 
 
 <p align="justify"; style="margin: 0.3em">
-<b> 1.  Иван Федорович Виндриевский </b> родился в 1922 году в селе Новониколаевка Балаковского района Саратовской области. После окончания школы поступил в медицинский институт, но успел проучиться только три курса – началась Великая Отечественная война. Призвали на защиту Отечества 6 июля 1942 года.
+<b> 1.  РРІР°РЅ Р¤РµРґРѕСЂРѕРІРёС‡ Р’РёРЅРґСЂРёРµРІСЃРєРёР№ </b> СЂРѕРґРёР»СЃСЏ РІ 1922 РіРѕРґСѓ РІ СЃРµР»Рµ РќРѕРІРѕРЅРёРєРѕР»Р°РµРІРєР° Р‘Р°Р»Р°РєРѕРІСЃРєРѕРіРѕ СЂР°Р№РѕРЅР° РЎР°СЂР°С‚РѕРІСЃРєРѕР№ РѕР±Р»Р°СЃС‚Рё. РџРѕСЃР»Рµ РѕРєРѕРЅС‡Р°РЅРёСЏ С€РєРѕР»С‹ РїРѕСЃС‚СѓРїРёР» РІ РјРµРґРёС†РёРЅСЃРєРёР№ РёРЅСЃС‚РёС‚СѓС‚, РЅРѕ СѓСЃРїРµР» РїСЂРѕСѓС‡РёС‚СЊСЃСЏ С‚РѕР»СЊРєРѕ С‚СЂРё РєСѓСЂСЃР° вЂ“ РЅР°С‡Р°Р»Р°СЃСЊ Р’РµР»РёРєР°СЏ РћС‚РµС‡РµСЃС‚РІРµРЅРЅР°СЏ РІРѕР№РЅР°. РџСЂРёР·РІР°Р»Рё РЅР° Р·Р°С‰РёС‚Сѓ РћС‚РµС‡РµСЃС‚РІР° 6 РёСЋР»СЏ 1942 РіРѕРґР°.
 </p>
 <p align="justify"; style="text-indent: 25px;  margin: 0.3em">
-Для прохождения службы был направлен в 32-ю саперную бригаду, которая после переформирования в ноябре 1942-го стала называться 11-й инженерно-минной бригадой, а с 10 июля 1943 года – 11-й инженерно-саперной бригадой. До октября 1943-го проходил службу в должности минера 151-го инженерно-саперного батальона, после чего был исключен из его состава, но остался к нему прикомандированным от 1-го запасного саперного полка.
+Р”Р»СЏ РїСЂРѕС…РѕР¶РґРµРЅРёСЏ СЃР»СѓР¶Р±С‹ Р±С‹Р» РЅР°РїСЂР°РІР»РµРЅ РІ 32-СЋ СЃР°РїРµСЂРЅСѓСЋ Р±СЂРёРіР°РґСѓ, РєРѕС‚РѕСЂР°СЏ РїРѕСЃР»Рµ РїРµСЂРµС„РѕСЂРјРёСЂРѕРІР°РЅРёСЏ РІ РЅРѕСЏР±СЂРµ 1942-РіРѕ СЃС‚Р°Р»Р° РЅР°Р·С‹РІР°С‚СЊСЃСЏ 11-Р№ РёРЅР¶РµРЅРµСЂРЅРѕ-РјРёРЅРЅРѕР№ Р±СЂРёРіР°РґРѕР№, Р° СЃ 10 РёСЋР»СЏ 1943 РіРѕРґР° вЂ“ 11-Р№ РёРЅР¶РµРЅРµСЂРЅРѕ-СЃР°РїРµСЂРЅРѕР№ Р±СЂРёРіР°РґРѕР№. Р”Рѕ РѕРєС‚СЏР±СЂСЏ 1943-РіРѕ РїСЂРѕС…РѕРґРёР» СЃР»СѓР¶Р±Сѓ РІ РґРѕР»Р¶РЅРѕСЃС‚Рё РјРёРЅРµСЂР° 151-РіРѕ РёРЅР¶РµРЅРµСЂРЅРѕ-СЃР°РїРµСЂРЅРѕРіРѕ Р±Р°С‚Р°Р»СЊРѕРЅР°, РїРѕСЃР»Рµ С‡РµРіРѕ Р±С‹Р» РёСЃРєР»СЋС‡РµРЅ РёР· РµРіРѕ СЃРѕСЃС‚Р°РІР°, РЅРѕ РѕСЃС‚Р°Р»СЃСЏ Рє РЅРµРјСѓ РїСЂРёРєРѕРјР°РЅРґРёСЂРѕРІР°РЅРЅС‹Рј РѕС‚ 1-РіРѕ Р·Р°РїР°СЃРЅРѕРіРѕ СЃР°РїРµСЂРЅРѕРіРѕ РїРѕР»РєР°.
 </p>
 <p align="justify"; style="text-indent: 25px;  margin: 0.3em">
-Вместе с бригадой прошел несколько тысяч километров от Калужской области через Смоленск, Белоруссию и Польшу до Германии. Встретил Победу в районе местечка Пархим в 150 километрах северо-западнее Берлина. 
+Р’РјРµСЃС‚Рµ СЃ Р±СЂРёРіР°РґРѕР№ РїСЂРѕС€РµР» РЅРµСЃРєРѕР»СЊРєРѕ С‚С‹СЃСЏС‡ РєРёР»РѕРјРµС‚СЂРѕРІ РѕС‚ РљР°Р»СѓР¶СЃРєРѕР№ РѕР±Р»Р°СЃС‚Рё С‡РµСЂРµР· РЎРјРѕР»РµРЅСЃРє, Р‘РµР»РѕСЂСѓСЃСЃРёСЋ Рё РџРѕР»СЊС€Сѓ РґРѕ Р“РµСЂРјР°РЅРёРё. Р’СЃС‚СЂРµС‚РёР» РџРѕР±РµРґСѓ РІ СЂР°Р№РѕРЅРµ РјРµСЃС‚РµС‡РєР° РџР°СЂС…РёРј РІ 150 РєРёР»РѕРјРµС‚СЂР°С… СЃРµРІРµСЂРѕ-Р·Р°РїР°РґРЅРµРµ Р‘РµСЂР»РёРЅР°. 
 </p>
 <p align="justify"; style="text-indent: 25px;  margin: 0.3em">
-Как минер строил мосты и минировал дороги противопехотными и противотанковыми минами, проводил разминирование путей, очищал их от снега. Разыскивал и обезвреживал полевые фугасы, различного рода «сюрпризы», растаскивал заминированные завалы, готовил десантные переправы через реки для войск, техники и боеприпасов на подручных и табельных средствах.
+РљР°Рє РјРёРЅРµСЂ СЃС‚СЂРѕРёР» РјРѕСЃС‚С‹ Рё РјРёРЅРёСЂРѕРІР°Р» РґРѕСЂРѕРіРё РїСЂРѕС‚РёРІРѕРїРµС…РѕС‚РЅС‹РјРё Рё РїСЂРѕС‚РёРІРѕС‚Р°РЅРєРѕРІС‹РјРё РјРёРЅР°РјРё, РїСЂРѕРІРѕРґРёР» СЂР°Р·РјРёРЅРёСЂРѕРІР°РЅРёРµ РїСѓС‚РµР№, РѕС‡РёС‰Р°Р» РёС… РѕС‚ СЃРЅРµРіР°. Р Р°Р·С‹СЃРєРёРІР°Р» Рё РѕР±РµР·РІСЂРµР¶РёРІР°Р» РїРѕР»РµРІС‹Рµ С„СѓРіР°СЃС‹, СЂР°Р·Р»РёС‡РЅРѕРіРѕ СЂРѕРґР° В«СЃСЋСЂРїСЂРёР·С‹В», СЂР°СЃС‚Р°СЃРєРёРІР°Р» Р·Р°РјРёРЅРёСЂРѕРІР°РЅРЅС‹Рµ Р·Р°РІР°Р»С‹, РіРѕС‚РѕРІРёР» РґРµСЃР°РЅС‚РЅС‹Рµ РїРµСЂРµРїСЂР°РІС‹ С‡РµСЂРµР· СЂРµРєРё РґР»СЏ РІРѕР№СЃРє, С‚РµС…РЅРёРєРё Рё Р±РѕРµРїСЂРёРїР°СЃРѕРІ РЅР° РїРѕРґСЂСѓС‡РЅС‹С… Рё С‚Р°Р±РµР»СЊРЅС‹С… СЃСЂРµРґСЃС‚РІР°С….
 </p>
 
 <p>
-<b> 2. Константин Иванович Виндриевский. </b> Был призван приказом в секретный отдел закрытого предприятия, которое занималось разработкой оружия.
+<b> 2. РљРѕРЅСЃС‚Р°РЅС‚РёРЅ РРІР°РЅРѕРІРёС‡ Р’РёРЅРґСЂРёРµРІСЃРєРёР№. </b> Р‘С‹Р» РїСЂРёР·РІР°РЅ РїСЂРёРєР°Р·РѕРј РІ СЃРµРєСЂРµС‚РЅС‹Р№ РѕС‚РґРµР» Р·Р°РєСЂС‹С‚РѕРіРѕ РїСЂРµРґРїСЂРёСЏС‚РёСЏ, РєРѕС‚РѕСЂРѕРµ Р·Р°РЅРёРјР°Р»РѕСЃСЊ СЂР°Р·СЂР°Р±РѕС‚РєРѕР№ РѕСЂСѓР¶РёСЏ.
 </p>
 </font>
 
