--- a/ann/index1.htm
+++ b/ann/index1.htm
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
+	<title>РњРѕСЏ СЃРµРјСЊСЏ!</title>
+	<meta name="description" content="">
 <title>
 </title>
 <style>
@@ -11,13 +15,13 @@
 
 <h1 align="center">
 <em>
-Добро пожаловать на сайт, посвященный родословной семьи Щеголихины!
+Р”РѕР±СЂРѕ РїРѕР¶Р°Р»РѕРІР°С‚СЊ РЅР° СЃР°Р№С‚, РїРѕСЃРІСЏС‰РµРЅРЅС‹Р№ СЂРѕРґРѕСЃР»РѕРІРЅРѕР№ СЃРµРјСЊРё Р©РµРіРѕР»РёС…РёРЅС‹!
 </em>
 </h1>
 
 <p>
 <h2  align="center">
-История семьи Щеголихины 
+РСЃС‚РѕСЂРёСЏ СЃРµРјСЊРё Р©РµРіРѕР»РёС…РёРЅС‹ 
 </h2>
 </p>
 
@@ -30,12 +34,12 @@ style="background-color:#FFFACD"
 width="100%" 
 height="130">
 <tr>
-<th style="background-color:#FFDAB9"><A href=2.htm>История семьи</a></th>
-<th style="background-color:#FFDAB9"><A href=3.htm>География фамилии</a></th>
-<th style="background-color:#FFDAB9"><A href=4.htm>Семейный альбом</a></th>
-<th style="background-color:#FFDAB9"><A href=5.htm>Поколенные росписи</a></th>
+<th style="background-color:#FFDAB9"><A href=2.htm>РСЃС‚РѕСЂРёСЏ СЃРµРјСЊРё</a></th>
+<th style="background-color:#FFDAB9"><A href=3.htm>Р“РµРѕРіСЂР°С„РёСЏ С„Р°РјРёР»РёРё</a></th>
+<th style="background-color:#FFDAB9"><A href=4.htm>РЎРµРјРµР№РЅС‹Р№ Р°Р»СЊР±РѕРј</a></th>
+<th style="background-color:#FFDAB9"><A href=5.htm>РџРѕРєРѕР»РµРЅРЅС‹Рµ СЂРѕСЃРїРёСЃРё</a></th>
 </tr> 
-<!--ряд с ячейками заголовков-->
+<!--СЂСЏРґ СЃ СЏС‡РµР№РєР°РјРё Р·Р°РіРѕР»РѕРІРєРѕРІ-->
 
 </table>
 
