--- a/ann/3.htm
+++ b/ann/3.htm
@@ -2,16 +2,28 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<title>Evgenstudio</title>
+	<title>География фамилии</title>
 	<meta name="description" content="">
 <title>
-Моя первая страница
+
 
 </title>
-
+<style>
+	.block{
+ 		width: 1200px;
+ 		margin-left: auto;
+ 		margin-right: auto;
+ 	}
+</style>
+<link rel="stylesheet" href="fonts.css">
 </head>
 
 <body>
+
+<div class="block">
+<a href="index1.htm" style="margin-top:30px; text-align:left">
+	<p>Вернуться назад</p>
+</a>
 <h1 align="center">
 <em>
 География фамилии 
@@ -19,16 +31,17 @@
 </h1>
 <font face="Verdana"; size="+1"> 
 <p>
-На карте изображено расселение людей, Имеющих фамилию Щеголихин (-а). Можно заметить, что большинство людей, имеющих данную фамилию, проживают на территории России.
+На карте изображено расселение людей, Имеющих фамилию Дермичев (-а). Можно заметить, что большинство людей, имеющих данную фамилию, проживают на территории России.
 </p>
-<p style="text-indent: 25px">
+<p>
 Большая родственников, с которыми наша семья поддерживает связь, проживают с Москве.
 </p>
 </font>
 
-<iframe src="https://www.google.com/maps/d/embed?mid=14sPKrh1UbE6aPnNSjy1HDo65mEs&hl=ru" width="100%" height="100%"></iframe>
+<iframe src="https://www.google.com/maps/d/embed?mid=13fTHKchmeRsiARf1Gq7lIryqZDQ" width="100%" height="500"></iframe>
 
 <body bgcolor=#c4a08f>
 </body>
+</div>
 
 </html>
