--- a/ann/4.htm
+++ b/ann/4.htm
@@ -2,25 +2,47 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<title>Evgenstudio</title>
+	<title>Семейный альбом</title>
 	<meta name="description" content="">
 <title>
 Моя первая страница
 
 </title>
+<link rel="stylesheet" href="fonts.css">
+ <style>
+ 	img{
+ 		width: 100%;
+ 		height: auto;
 
+ 	}
+ 	.block{
+ 		width: 1200px;
+ 		margin-left: auto;
+ 		margin-right: auto;
+ 	}
+ 	.image{
+ 		width: 100%;
+ 		margin-bottom: 40px;
+ 		margin-top: 40px;
+ 	}
+ 
+ </style>
 </head>
 
+<div class="block">
 <body>
+<a href="index1.htm" style="margin-top:30px; text-align:left">
+	<p>Вернуться назад</p>
+</a>
 <h1 align="center">
 <em>
 Семейный альбом
 <p>
-<iframe src="https://docs.google.com/presentation/d/15N7_DluOlm4gPJL-dEtEegw96HJTSPuCLjGoHr2LjBk/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<iframe src="https://docs.google.com/presentation/d/1m70BDsxKD5HD9OTRKkWUEuifvv6xm9pPcdIpshVC_Zc/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 </p>
 </em>
 </h1>
 <body bgcolor=#c4a08f>
 </body>
-
+</div>
 </html>
