--- a/ann/2.htm
+++ b/ann/2.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<title>Evgenstudio</title>
+	<title>История семьи</title>
 	<meta name="description" content="">
 <title>
 
@@ -26,33 +26,28 @@
  		margin-bottom: 40px;
  		margin-top: 40px;
  	}
- 	
+ 
  </style>
 <body>
-<h1 align="center">
-<em>
-История семьи 
-</em>
-</h1>
 <div class="block">
+<a href="index1.htm" style="margin-top:30px; text-align:left">
+	<p>Вернуться назад</p>
+</a>
+<h1 align="center">
+<b>
+История семьи 
+</b>
+</h1>
+
 <font face="Verdana"> 
 <font size="+1">
 
 
-<p align="justify"; style="margin: 0.3em">
-Фамилия <b> Щеголихин </b> образована от прозвища Щеголиха. Так обычно называли того, кто нарядно, изысканно одет, кто имеет пристрастие к дорогим, модным нарядам. Само прозвище восходит к глаголу «щеголять» - «хвастать, хвалиться превосходством чего-либо».
-</p>
-
-<p align="justify"; style="text-indent: 25px;  margin: 0.3em">
-Как правило, щеголей в народе осуждали: «Щеголять смолоду, а под старость умирать с голоду», «Щеголь Ивашка, что ни год, то рубашка!». 
-
-Кроме того, в некоторых говорах Щеголихой называли не только любительницу красиво одеваться, но и белоручку, человека, который избегает тяжелой работы.
-</p>
-<p align="justify"; style="text-indent: 25px;  margin: 0.3em">
-Фамилии, образованные от женского прозвища были достаточно редки на Руси Они возникали лишь в том случае, когда женщине приходилось одной воспитывать своих детей. Щеголиха, со временем получил фамилию Щеголихин.
-</p>
-<p align="justify"; style="text-indent: 25px;  margin: 0.3em">
-Фоносемантический анализ фамилии Щеголихин выявил, что фамилия Щеголихин имеет восемнадцать ярковыраженных фоносемантических признаков: женственное, трусливое, маленькое, низменное, плохое, сложное, страшное, тихое, отталкивающее, шероховатое, тусклое, печальное, горячее, слабое, пассивное, медлительное, короткое, хилое.
+<p align="justify"; style="margin: 0.3em; font-family: 'Roboto'">
+Фамилия <b>Дермичев</b> в 50% случаев имеет русское происхождение, в 5% - украинское, в 10% - белорусское, в 30% приходит из языков народов России (татарского, мордовского, башкирского, бурятского и т. д.), в 5% случаев происходит из болгарского или сербского языков. В любом случае эта фамилия образована от имени, прозвища, рода занятий или места жительства дальнего предка человека по мужской линии. 
+<br><br>Фамилия Дермичев относится к типу не распространенной в географических регионах России и соседних стран. В имеющихся ретроспективных данных носители фамилии были очень важными персонами из русского новгородского дворянства в XVII-XVIII в., носивших определенную государеву привелегию. Исторические свидетельства фамилии можно обнаружить в списке переписи населения Древней Руси в эпоху царствования Ивана Грозного. У царя существовал особый список уважаемых и красивых фамилий, которые даровались придворным только в случае похвалы или награды. <br><br>Тем самым данная фамилия донесла свое первоначальное значение и является исключительной.. 
+Написание фамилии латиницей: DERMICHEV <br><br><br>
+Фамилия Дермичев обладает следующими фоносемантическими качествами из 25 возможных (качества приводятся по степени убывания их выраженности):Добрый, Короткий, Весёлый, Активный.
 </p>
 
 </font>
@@ -66,9 +61,12 @@
 <div class="image">
 	<img src="img/1.jpg" alt="">
 </div>
-<div class="image">
-	<img src="img/2.png" alt="">
-</div>
+
+<a href="https://www.geni.com/share?t=6000000059321469103">
+	<p>Показать мое древо</p>
+	
+</a>
+
 </div>
 </body>
 
