--- a/ann/5.htm
+++ b/ann/5.htm
@@ -8,10 +8,32 @@
 Моя первая страница
 
 </title>
+ <style>
+ 	img{
+ 		width: 100%;
+ 		height: auto;
 
+ 	}
+ 	.block{
+ 		width: 1200px;
+ 		margin-left: auto;
+ 		margin-right: auto;
+ 	}
+ 	.image{
+ 		width: 100%;
+ 		margin-bottom: 40px;
+ 		margin-top: 40px;
+ 	}
+ 
+ </style>
+ <link rel="stylesheet" href="fonts.css">
 </head>
 
 <body>
+<div class="block">
+<a href="index1.htm" style="margin-top:30px; text-align:left">
+	<p>Вернуться назад</p>
+</a>
 <h1 align="center">
 <em>
 Поколенные росписи
@@ -19,38 +41,33 @@
 </h1>
 
 <font face="Verdana"; size="+1"> 
-<p>
-На картинке ниже можно видеть генеологическое дерево семьи Щеголихины.
-</p>
+
 </font>
 
 
-<p>
-<img src="derevo.jpg.png"  width="100%" height="70%">
-</p>
+
 
 <font face="Verdana"; size="+1"> 
 
 
 
 <p align="justify"; style="margin: 0.3em">
-<b> 1.  Иван Федорович Виндриевский </b> родился в 1922 году в селе Новониколаевка Балаковского района Саратовской области. После окончания школы поступил в медицинский институт, но успел проучиться только три курса – началась Великая Отечественная война. Призвали на защиту Отечества 6 июля 1942 года.
-</p>
-<p align="justify"; style="text-indent: 25px;  margin: 0.3em">
-Для прохождения службы был направлен в 32-ю саперную бригаду, которая после переформирования в ноябре 1942-го стала называться 11-й инженерно-минной бригадой, а с 10 июля 1943 года – 11-й инженерно-саперной бригадой. До октября 1943-го проходил службу в должности минера 151-го инженерно-саперного батальона, после чего был исключен из его состава, но остался к нему прикомандированным от 1-го запасного саперного полка.
-</p>
-<p align="justify"; style="text-indent: 25px;  margin: 0.3em">
-Вместе с бригадой прошел несколько тысяч километров от Калужской области через Смоленск, Белоруссию и Польшу до Германии. Встретил Победу в районе местечка Пархим в 150 километрах северо-западнее Берлина. 
-</p>
-<p align="justify"; style="text-indent: 25px;  margin: 0.3em">
-Как минер строил мосты и минировал дороги противопехотными и противотанковыми минами, проводил разминирование путей, очищал их от снега. Разыскивал и обезвреживал полевые фугасы, различного рода «сюрпризы», растаскивал заминированные завалы, готовил десантные переправы через реки для войск, техники и боеприпасов на подручных и табельных средствах.
-</p>
+<b> 1. Иннокентий Александрович Каляканов </b>Он родился 3 ноября 1924 года в семье Александра Фёдоровича Каляканова на Волге, в деревне Монастырское под Ульяновском. В семье было 5 детей. Дедушка был вторым по старшинству и единственным мальчиком.
+Когда ему было 16 лет, началась Великая Отечественная война. Отца забрали на фронт, а дедушка остался помогать семье, работал в колхозе наравне со взрослыми. <br><br>
 
-<p>
-<b> 2. Константин Иванович Виндриевский. </b> Был призван приказом в секретный отдел закрытого предприятия, которое занималось разработкой оружия.
+Потом, в 18 неполных лет, дедушка пошёл на фронт. Он служил в разных местах во время войны. А когда она закончилась, осталась срочная служба - 6 лет и 2 месяца. В 1948 году дедушка сдал экстерном Харьковское военное училище и остался служить офицером до 1975 года. В целом он служил 33 года с 1942 по 1975: в Коврове, Горьком, Совестной гавани, Горловке (Донецкая область), Ворошиловграде, Узине, Стрые, Умани, Смоленске. Дедушка служил в пехоте, авиации, артиллерии, ракетных войсках. <br>
+Сейчас моему дедушке вот-вот исполнится 92 года. Он очень сильный духом человек, я горжусь им и очень люблю.
+Ниже фото моего дедушки
 </p>
+<div class="image"><img src="img/d1.jpg" alt=""></div>
+<div class="image"><img src="img/d2.jpg" alt=""></div>
+<div class="image"><img src="img/d3.jpg" alt=""></div>
+<div class="image"><img src="img/d4.jpg" alt=""></div>
+<div class="image"><img src="img/d5.jpg" alt=""></div>
+
+
 </font>
-
+</div>
 <body bgcolor=#c4a08f>
 </body>
 
