--- a/ann/3.htm
+++ b/ann/3.htm
@@ -34,7 +34,7 @@
 На карте изображено расселение людей, Имеющих фамилию Дермичев (-а). Можно заметить, что большинство людей, имеющих данную фамилию, проживают на территории России.
 </p>
 <p>
-Большая родственников, с которыми наша семья поддерживает связь, проживают с Москве.
+Большинство родственников, имеющих фамилию Дермичев(-а) сейчас проживают в Москве. Места, отмеченные на карте - города и деревни, откуда родственники переехали
 </p>
 </font>
 
