--- a/podpolie/index.html
+++ b/podpolie/index.html
@@ -193,7 +193,7 @@
 				</button>
 			</div>
 			<div class="menu__category__slider">
-				<div class="menu__slider1 menu__slider active owl-carousel owl-theme">
+				<div class="menu__slider1 menu__slider owl-carousel owl-theme active">
 					<div class="slide">
 						<div class="menu_block">
 							<div class="photo_eat1">
@@ -258,189 +258,201 @@
 						</div>
 					</div>
 				</div>
-				<div class="menu__slider2 menu__slider">
-					<div class="menu_block">
-						<div class="photo_eat1">
-							<img src="img/eat__food.png" alt="">
+				<div class="menu__slider2 menu__slider owl-carousel owl-theme">
+					<div class="slide">
+						<div class="menu_block">
+							<div class="photo_eat1">
+								<img src="img/eat__food.png" alt="">
+							</div>
+							<p class="price">Салат «Подпольный»  </p>
+							<p class="name">310 руб. / 215 гр.</p>
 						</div>
-						<p class="price">Салат «Подпольный»  </p>
-						<p class="name">310 руб. / 215 гр.</p>
+						<div class="menu_block">
+							<div class="photo_eat2">
+								<img src="img/eat__food2.png" alt="">
+							</div>
+							<p class="price">Салат «Кремлевский»</p>
+							<p class="name"> 350 руб. / 220гр.</p>
+						</div>
+						<div class="menu_block">
+							<div class="photo_eat3">
+								<img src="img/eat__food2.png" alt="">
+							</div>
+							<p class="price">Салат «Щупальца империализма» </p>
+							<p class="name"> 310 руб. / 200гр.</p>
+						</div>
+						<div class="menu_block">
+							<div class="photo_eat4">
+								<img src="img/eat__food.png" alt="">
+							</div>
+							<p class="price">Салат «В Разливе» </p>
+							<p class="name"> 432 руб. / 240гр.</p>
+						</div>
 					</div>
-					<div class="menu_block">
-						<div class="photo_eat2">
+					<div class="slide">
+						<div class="menu_block">
+							<div class="photo_eat5">
+								<img src="img/eat__food.png" alt="">
+							</div>
+							<p class="price">Салат в стиле «Цезарь» с куриным филе </p>
+							<p class="name"> 360 руб. / 255гр.</p>
+						</div>
+						<div class="menu_block">
+							<div class="photo_eat6">
 							<img src="img/eat__food2.png" alt="">
+
+							</div>
+							<p class="price">Салат в стиле «Цезарь» с «Дарами моря»</p>
+							<p class="name"> 470руб. /280гр.</p>
 						</div>
-						<p class="price">Салат «Кремлевский»</p>
-						<p class="name"> 350 руб. / 220гр.</p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat3">
-							<img src="img/eat__food.png" alt="">
-						</div>
-						<p class="price">Салат «Щупальца империализма» </p>
-						<p class="name"> 310 руб. / 200гр.</p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat4">
+						<div class="menu_block">
+							<div class="photo_eat7">
 							<img src="img/eat__food2.png" alt="">
+
+							</div>
+							<p class="price">Салат «Болгарский партизан» </p>
+							<p class="name">320 руб. / 280гр.</p>
 						</div>
-						<p class="price">Салат «В Разливе» </p>
-						<p class="name"> 432 руб. / 240гр.</p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat5">
+						<div class="menu_block">
+							<div class="photo_eat8">
 							<img src="img/eat__food.png" alt="">
-						</div>
-						<p class="price">Салат в стиле «Цезарь» с куриным филе </p>
-						<p class="name"> 360 руб. / 255гр.</p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat6">
-						<img src="img/eat__food2.png" alt="">
 
+							</div>
+							<p class="price">Салат овощной «Интернациональный»</p>
+							<p class="name"> 280 руб. / 220гр.</p>
 						</div>
-						<p class="price">Салат в стиле «Цезарь» с «Дарами моря»</p>
-						<p class="name"> 470руб. /280гр.</p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat7">
-						<img src="img/eat__food.png" alt="">
-
-						</div>
-						<p class="price">Салат «Болгарский партизан» </p>
-						<p class="name">320 руб. / 280гр.</p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat8">
-						<img src="img/eat__food2.png" alt="">
-
-						</div>
-						<p class="price">Салат овощной «Интернациональный»</p>
-						<p class="name"> 280 руб. / 220гр.</p>
 					</div>
 				</div>
-				<div class="menu__slider3 menu__slider">
-					<div class="menu_block">
-						<div class="photo_eat1">
-						<img src="img/eat__food.png" alt="">
+				<div class="menu__slider3 menu__slider owl-carousel owl-theme">
+					<div class="slide">
+						<div class="menu_block">
+							<div class="photo_eat1">
+							<img src="img/eat__food.png" alt="">
 
+							</div>
+							<p class="price"></p>
+							<p class="name"></p>
 						</div>
-						<p class="price"></p>
-						<p class="name"></p>
+						<div class="menu_block">
+							<div class="photo_eat2">
+							<img src="img/eat__food2.png" alt="">
+
+							</div>
+							<p class="price"></p>
+							<p class="name"></p>
+						</div>
+						<div class="menu_block">
+							<div class="photo_eat3">
+							<img src="img/eat__food2.png" alt="">
+
+							</div>
+							<p class="price"></p>
+							<p class="name"></p>
+						</div>
+						<div class="menu_block">
+							<div class="photo_eat4">
+							<img src="img/eat__food.png" alt="">
+
+							</div>
+							<p class="price"></p>
+							<p class="name"></p>
+						</div>
 					</div>
-					<div class="menu_block">
-						<div class="photo_eat2">
-						<img src="img/eat__food2.png" alt="">
+					<div class="slide">
+						<div class="menu_block">
+							<div class="photo_eat5">
+							<img src="img/eat__food.png" alt="">
 
+							</div>
+							<p class="price"></p>
+							<p class="name"></p>
 						</div>
-						<p class="price"></p>
-						<p class="name"></p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat3">
-						<img src="img/eat__food.png" alt="">
+						<div class="menu_block">
+							<div class="photo_eat6">
+							<img src="img/eat__food2.png" alt="">
 
+							</div>
+							<p class="price"></p>
+							<p class="name"></p>
 						</div>
-						<p class="price"></p>
-						<p class="name"></p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat4">
-						<img src="img/eat__food2.png" alt="">
+						<div class="menu_block">
+							<div class="photo_eat7">
+							<img src="img/eat__food2.png" alt="">
 
+							</div>
+							<p class="price"></p>
+							<p class="name"></p>
 						</div>
-						<p class="price"></p>
-						<p class="name"></p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat5">
-						<img src="img/eat__food.png" alt="">
+						<div class="menu_block">
+							<div class="photo_eat8">
+							<img src="img/eat__food.png" alt="">
 
+							</div>
+							<p class="price"></p>
+							<p class="name"></p>
 						</div>
-						<p class="price"></p>
-						<p class="name"></p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat6">
-						<img src="img/eat__food.png" alt="">
-
-						</div>
-						<p class="price"></p>
-						<p class="name"></p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat7">
-						<img src="img/eat__food.png" alt="">
-
-						</div>
-						<p class="price"></p>
-						<p class="name"></p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat8">
-						<img src="img/eat__food.png" alt="">
-
-						</div>
-						<p class="price"></p>
-						<p class="name"></p>
 					</div>
 				</div>
-				<div class="menu__slider4 menu__slider">
-					<div class="menu_block">
-						<div class="photo_eat1">
-							<img src="img/eat__food.png" alt="">
+				<div class="menu__slider4 menu__slider owl-carousel owl-theme">
+					<div class="slide">
+						<div class="menu_block">
+							<div class="photo_eat1">
+								<img src="img/eat__food.png" alt="">
+							</div>
+							<p class="price"></p>
+							<p class="name"></p>
 						</div>
-						<p class="price"></p>
-						<p class="name"></p>
+						<div class="menu_block">
+							<div class="photo_eat2">
+								<img src="img/eat__food2.png" alt="">
+							</div>
+							<p class="price"></p>
+							<p class="name"></p>
+						</div>
+						<div class="menu_block">
+							<div class="photo_eat3">
+								<img src="img/eat__food2.png" alt="">
+							</div>
+							<p class="price"></p>
+							<p class="name"></p>
+						</div>
+						<div class="menu_block">
+							<div class="photo_eat4">
+								<img src="img/eat__food.png" alt="">
+							</div>
+							<p class="price"></p>
+							<p class="name"></p>
+						</div>
 					</div>
-					<div class="menu_block">
-						<div class="photo_eat2">
-							<img src="img/eat__food.png" alt="">
+					<div class="slide">
+						<div class="menu_block">
+							<div class="photo_eat5">
+								<img src="img/eat__food.png" alt="">
+							</div>
+							<p class="price"></p>
+							<p class="name"></p>
 						</div>
-						<p class="price"></p>
-						<p class="name"></p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat3">
-							<img src="img/eat__food.png" alt="">
+						<div class="menu_block">
+							<div class="photo_eat6">
+								<img src="img/eat__food2.png" alt="">
+							</div>
+							<p class="price"></p>
+							<p class="name"></p>
 						</div>
-						<p class="price"></p>
-						<p class="name"></p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat4">
-							<img src="img/eat__food.png" alt="">
+						<div class="menu_block">
+							<div class="photo_eat7">
+								<img src="img/eat__food2.png" alt="">
+							</div>
+							<p class="price"></p>
+							<p class="name"></p>
 						</div>
-						<p class="price"></p>
-						<p class="name"></p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat5">
-							<img src="img/eat__food.png" alt="">
+						<div class="menu_block">
+							<div class="photo_eat8">
+								<img src="img/eat__food.png" alt="">
+							</div>
+							<p class="price"></p>
+							<p class="name"></p>
 						</div>
-						<p class="price"></p>
-						<p class="name"></p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat6">
-							<img src="img/eat__food.png" alt="">
-						</div>
-						<p class="price"></p>
-						<p class="name"></p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat7">
-							<img src="img/eat__food.png" alt="">
-						</div>
-						<p class="price"></p>
-						<p class="name"></p>
-					</div>
-					<div class="menu_block">
-						<div class="photo_eat8">
-							<img src="img/eat__food.png" alt="">
-						</div>
-						<p class="price"></p>
-						<p class="name"></p>
 					</div>
 				</div>
 			</div>
