--- a/event/index.html
+++ b/event/index.html
@@ -24,6 +24,23 @@
 <body>
 <div class="container">
 	<div class="row">
+		<div class="col-md-6 col-xs-12 text-left">
+		<div class="logo">
+			<img src="logo.png" alt="">
+		</div>
+			<p>Тел.          <a href="tel:+380667828888">+38(066)782-88-88</a> <br>
+                  <a href="tel:+380977828888">+38(097)782-88-88</a><br>
+
+				Тел./Viber  +38(095)728-13-77 <br>
+				<a href="www.nr-event.com ">www.nr-event.com </a> <br>
+				nr-event@ukr.net </p>
+		</div>
+		<div class="col-md-6 col-xs-12 text-right">
+			<img src="logo.png" alt="">
+		</div>
+	</div>
+	<div class="row">
+
 		<div class="col-xs-12 text-center">
 			<h1>Добро пожаловать на сайт ивент-агентства Наталии Рудницкой!</h1>
 		</div>
@@ -32,19 +49,7 @@
 <h6></h6>
 		</div>
 	</div>
-	<div class="row">
-		<div class="col-md-6 col-xs-12 text-left">
-			<p>Тел.          <a href="tel:+380667828888">+38(066)782-88-88</a> <br>
-                  <a href="tel:+380977828888">+38(097)782-88-88</a><br>
-
-Тел./Viber  +38(095)728-13-77 <br>
-<a href="www.nr-event.com ">www.nr-event.com </a> <br>
-nr-event@ukr.net </p>
-		</div>
-		<div class="col-md-6 col-xs-12 text-right">
-			<img src="logo.png" alt="">
-		</div>
-	</div>
+	
 </div>
 	<!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
