--- a/event/index.html
+++ b/event/index.html
@@ -37,7 +37,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-6 col-xs-12 text-left">
+		<div class="col-sm-6 col-xs-12 text-left">
 		
 			<p>Тел.          <a href="tel:+380667828888">+38(066)782-88-88</a> <br>
                   <a href="tel:+380977828888">+38(097)782-88-88</a><br>
@@ -46,7 +46,7 @@
 				<a href="www.nr-event.com ">www.nr-event.com </a> <br>
 				nr-event@ukr.net </p>
 		</div>
-		<div class="col-md-6 col-xs-12 text-right">
+		<div class="col-sm-6 col-xs-12 text-right">
 			<img src="logo.png" alt="">
 		</div>
 	</div>
